[gd_scene load_steps=2 format=3 uid="uid://b3wmo107vhbfd"]

[ext_resource type="Script" uid="uid://bbod52832org3" path="res://scripts/ui/menus/inventory_tab.gd" id="1_4vwq5"]

[node name="InventoryTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vwq5")
glow_radius = 11.5
glow_softness = 1.034
glow_width = 0.726
glow_strength = 3.224
pulse_speed = 1.575
